# agenticRag-rfp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  HOW_TO_USE_CLAUDE_CODE.md  Makefile  QUICK_REFERENCE.md  README.md  SESSION_PLAN.md  START_HERE.md  alembic.ini  app_modal.py  checkpoint_log.md  checkpoint_runner.py  contract_tests.py  docker-compose.yml  drift_detector.py  frontend_checkpoint_runner.py  frontend_drift_detector.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt
.github/: SECURITY.md  dependabot.yml
.mcp/: api-server.py  database-server.py
alembic/: env.py
app/: config.py  main.py
benchmark/: README.md  gates.yaml  golden_schema.py
deploy/: modal.py  modal_app.py
docs/: PLATFORM_DECISIONS.md  PRODUCTION_CHECKLIST.md  SKILL_02_INTERVIEW_QA.md  SKILL_02_WHAT_WE_BUILT.md
frontend/: .gitignore  CLAUDE.md  middleware.ts  next.config.ts  package-lock.json  package.json
scripts/: audit_hardcoded_values.py  create_test_vendor_pdf.py  reset_dev_data.py  seed_criteria.py  test_fixture_mandatory.py
skills/: SKILL_01_FOUNDATION.md  SKILL_01b_USERS_AUTH.md  SKILL_02_PLANNER_AND_CRITIC.md  SKILL_03_INGESTION_AGENT.md  SKILL_03b_RAG_QUALITY.md  SKILL_04_TO_09_REFERENCE.md  SKILL_07b_FRONTEND_UI.md
tests/: conftest.py  test_access_invariant.py  test_auditor_role.py  test_auth_hardening.py  test_benchmark_dataset.py  test_benchmark_gates.py  test_benchmark_metrics.py  test_correction_api.py  (+46 more)
(+366 files in other folders)
